# pythinfer

./: .gitignore  COVERAGE_ANALYSIS.md  GITHUB_ACTIONS_SETUP.md  LICENSE.txt  README.md  demo-script.md  pyproject.toml  pythinfer.code-workspace  test_ttl_export.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: test.yml
docs/: resolve-imports.md  tui.md
example_projects/eg0-basic/: README.md  basic-data.ttl  basic-model.ttl  eg_rule_to_infer_celebrity.rq  expected_pythinfer.yaml  pythinfer.yaml  pythinfer_celebrity.yaml  select_who_knows_whom.rq
example_projects/eg0-basic/derived/: expected_inferred_owlrl.trig  expected_inferred_wanted.trig  expected_merged.trig
example_projects/eg0-basic/expected/: expected-0-merged-provenance.ttl  expected-0-merged.trig  expected-1-inferred-provenance.ttl  expected-1-inferred.trig
example_projects/eg1-ancestors/: _merged.ttl  ancestors-data.ttl  ancestors-model.ttl  ancestors.yaml  pythinfer.yaml  select_people-failing.rq  select_people.rq
example_projects/eg1-ancestors/derived/: expected_inferred_owlrl.trig  expected_merged.trig
example_projects/eg1-ancestors/expected/: expected-0-merged-provenance.ttl  expected-0-merged.trig  expected-0-provenance.ttl  expected-1-inferred-provenance.ttl  expected-1-inferred.trig  expected-2-inferred-wanted.trig
example_projects/eg2-projects/: README.md  expected_pythinfer.yaml  infer-identical-datasets.rq  infer-related-projects-dev.rq  infer-related-projects-full.rq  infer-related-projects.rq  projects-data.ttl  projects-model.ttl  pythinfer.yaml
example_projects/eg2-projects/derived/: expected_inferred_owlrl.trig  expected_inferred_wanted.trig
example_projects/eg2-projects/expected/: expected-0-merged-provenance.ttl  expected-0-provenance.ttl  expected-1-inferred-provenance.ttl  expected-2-inferred-wanted.trig
example_projects/eg2-projects/queries/: select_all_external_sources.rq  select_all_projects.rq  select_all_same_as.rq
scripts/: __init__.py  demo_extra_export_format.py  explore_dataset_view_idea.py  explore_default_graphs.py  explore_owlrl_errant_inferences.py  explore_quads_in_rdflib.ipynb  explore_rdflib_graph_method_with_different_stores.py  owlrl_bug_skos_hierarchy.py  select_graphs.rq  test_cli_extra_export.py  test_extra_export_format.py  test_merge.ipynb  test_multiple_formats.py  test_owlrl_duplications.py  test_pydantic_validation.py
src/pythinfer/: __init__.py  api.py  cli.py  data.py  explore.py  infer.py  inout.py  known_unecessary_inferences.ttl  merge.py  project.py  query_tui.py  query_tui_pt.py  rdflibplus.py  resolve_imports.py
src/pythinfer/tui/: __init__.py  columns.py  query_tui.py  query_tui_pt.py  query_tui_textual.py
tests/e2e/: README.md  __init__.py  test_e2e_from_api.py  test_e2e_from_cli.py  test_merge.py
tests/integration/: README.md  test_cache_isolation.py  test_create_project_command.py  test_export_formats_roundtrip.py  test_python_api.py
tests/integration/inout/: test_create_project_command.py  test_discover_project.py  test_input_formats.py  test_project_path_resolution.py  test_project_roundtrip_from_yaml.py
tests/unit/: README.md  test_columns.py  test_explore.py  test_project_path_resolution.py  test_python_api.py  test_resolve_imports.py
tests/unit/inout/: test_discover_project.py  test_project_core_methods.py  test_project_validation.py
tests/unit/rdflibplus/: test_datasetview.py  test_datasetview_invert.py  test_datasetview_owlrl.py  test_reduce.py
vocabs-external/: skos.ttl
