[project]
name = "pythinfer"
version = "0.2.1"
description = "CLI to easily merge multiple RDF files and perform inference (OWL or SPARQL) on the result."
readme = "README.md"
authors = [{ name = "Robert Muil", email = "robertmuil@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "owlrl>=7.1.4",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "rdflib>=7.4.0",
    "typer>=0.20.0",
]

[project.scripts]
pythinfer = "pythinfer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["T201"]

[dependency-groups]
dev = ["jupyter>=1.1.1", "pandas>=2.3.3", "pytest>=9.0.1", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/pythinfer"]
branch = true
