[project]
name = "pythinfer"
version = "0.8.1"
description = "CLI to merge multiple RDF files, perform inference (OWL or SPARQL), and query the result."
readme = "README.md"
authors = [{ name = "Robert Muil", email = "robertmuil@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "owlrl>=7.1.4",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "rdflib>=7.4.0",
    "typer>=0.20.0",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["RDF", "OWL", "SPARQL", "Inference", "Semantic Web", "Linked Data"]

[project.scripts]
pythinfer = "pythinfer.cli:app"

[project.optional-dependencies]
tui-pt = [
    "prompt-toolkit>=3.0.52",
]
tui-textual = [
    "textual>=6.12.0",
    "textual-textarea>=0.17.2",
    "tree-sitter-sparql>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",  #  Magic numbers
    "D102", # Missing docstring in public method: just clutters tests
    "D103",  # Missing docstring: just clutters tests
    ]
"scripts/*" = ["T201"]

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Dataset\\.contexts is deprecated:DeprecationWarning",
    "ignore:Dataset\\.default_context is deprecated:DeprecationWarning",
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/pythinfer"]
branch = true
omit = [
    "src/pythinfer/tui/query_tui.py",
    "src/pythinfer/tui/query_tui_pt.py",
    "src/pythinfer/tui/query_tui_textual.py",
]

[tool.coverage.report]
exclude_also = [
    "# pragma: no cover",
    "def interactive\\(",       # curses TUI entry point
    "curses\\.wrapper\\(",      # curses launcher calls
]

[tool.pyright]
extraPaths = [".venv/lib/python3.12/site-packages"]
